2006-10-27  Martin Hunt  <hunt@redhat.com>

	* test.exp, test.tcl: Remove our own caching code
	and just use systemtap's new caching.

	* acct.c (main): Make pattern less selective so
	it works when run by root.

2006-10-23  David Smith  <dsmith@redhat.com>

	* test.exp (test_procedure): Handles cached module.

2006-09-26  David Smith  <dsmith@redhat.com>

	* test.tcl: Looks for 'staprun' instead of 'stpd'.

2006-07-21  Martin Hunt  <hunt@redhat.com>

	* signal.c: Fix expected pattern.

2006-06-26  Martin Hunt  <hunt@redhat.com>
	* stat.c: Add utime() test

2006-06-15  Martin Hunt  <hunt@redhat.com>
	* chmod.c: Results for some archs have
	4294967295 instead of -1. Fix expected results
	for now. 

2006-06-15  Martin Hunt  <hunt@redhat.com>
	* chmod.c: New test.
	
2006-06-14  Martin Hunt  <hunt@redhat.com>
	* test.tcl: Escape "|".
	* uid.c: Add setfsuid and setfsgid tests.
	* uid16.c: Ditto.
	* mmap.c, openclose.c, readwrite.c, stat.c: Fix
	expected results for sys_open calls.

2006-06-14  Martin Hunt  <hunt@redhat.com>	
	* setgetgid.c: Renamed to uid.c. Added more syscalls.
	* uid16.c: Add some more calls.

2006-06-13  Martin Hunt  <hunt@redhat.com>
	* test.exp: Modify to recognize unsupported tests.
	* test.tcl: Ditto.
	* uid16.c: ifdef out for all but i386.

2006-06-13  Martin Hunt  <hunt@redhat.com>	
	* sys.stp: Add indentation for nested syscalls.
	* uid16.c: New.